# ezprompt

./: .gitignore  README.md  pyproject.toml  setup.py
ezprompt/: __init__.py  ezprompt.py  utils.py
tests/: hello.py
