[project]
authors = [{name = "bkj", email = "bkj.322@gmail.com"}]
name = "ezprompt"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["json-repair>=0.46.1,<0.47", "tenacity>=9.1.2,<10", "pydantic>=2.11.4,<3", "litellm>=1.72.0,<2", "rich>=14.0.0,<15"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
ezprompt = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.13.*"
rich = ">=14.0.0,<15"
